--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
         <div class="menu">
             <ul>
                 <li><a href="/index.html">Página principal</a></li>
-                <li><a href="sobre_clinica.html">Sobre a Clínica</a></li> 
+                <li><a href="/sobre_clinica.html">Sobre a Clínica</a></li> 
                 <li><a href="/horario_atendimento.html">Horário de atendimento</a></li>
                 <li><a href="/contato.html">Contatos</a></li>
             </ul>
