--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="main">
             <div class="header">
-                <img src="/pgprincipal.png" />
+                <img src="pgprincipal.png" />
                 <!-- Aqui vai o seu header -->
             </div>
     
