--- a/horario_atendimento.html
+++ b/horario_atendimento.html
@@ -20,7 +20,7 @@
 
         <div class="main">
             <div class="header">
-                <img src="/hora_atendimento.png" />
+                <img src="hora_atendimento.png" />
                 <!-- Aqui vai o seu header -->
             </div>
     
